German language strings and start to validate coding standards with rubocop

--- a/app/views/settings/_omniauth_saml_settings.html.erb
+++ b/app/views/settings/_omniauth_saml_settings.html.erb
@@ -4,7 +4,7 @@
 </p>
 <p>
   <label><%= l(:label_login_page_text) %></label>
-  <%= text_field_tag 'settings[label_login_with_saml]', @settings['label_login_with_saml'], :size => 50 %>
+  <%= text_field_tag 'settings[label_login_with_saml]', @settings['label_login_with_saml'], size: 50 %>
 </p>
 <p>
   <label><%= l(:label_replace_redmine_login) %></label>
