Fixed installation instruction and refactore settings

--- a/app/views/saml/_view_account_login_top.html.slim
+++ b/app/views/saml/_view_account_login_top.html.slim
@@ -2,5 +2,5 @@
   - content_for :header_tags do
     = stylesheet_link_tag 'login', plugin: 'redmine_saml'
   #saml-login
-    = link_to label_for_saml_login,
+    = link_to saml_login_label,
               login_with_saml_redirect_path(provider: 'saml', origin: back_url)
