--- a/app/views/saml/settings/_settings.html.slim
+++ b/app/views/saml/settings/_settings.html.slim
@@ -1,14 +1,11 @@
 p
-  = label_tag 'settings[enabled]', l(:label_saml_enabled)
-  = check_box_tag 'settings[enabled]', true, @settings[:enabled]
+  = additionals_settings_checkbox :saml_enabled
 
 p
-  = label_tag 'settings[label_login_with_saml]', l(:label_login_page_text)
-  = text_field_tag 'settings[label_login_with_saml]', @settings[:label_login_with_saml], size: 50
-p
-  = label_tag 'settings[replace_redmine_login]', l(:label_replace_redmine_login)
-  = check_box_tag 'settings[replace_redmine_login]', true, @settings[:replace_redmine_login]
+  = additionals_settings_textfield :saml_login_label, size: 60
 
 p
-  = label_tag 'settings[onthefly_creation]', l(:label_onthefly_creation)
-  = check_box_tag 'settings[onthefly_creation]', true, @settings[:onthefly_creation]
+  = additionals_settings_checkbox :replace_redmine_login
+
+p
+  = additionals_settings_checkbox :onthefly_creation
