--- a/app/views/saml/_view_account_login_top.html.slim
+++ b/app/views/saml/_view_account_login_top.html.slim
@@ -1,4 +1,4 @@
-- if RedmineSAML.enabled?
+- if RedmineSaml.enabled?
   - content_for :header_tags do
     = stylesheet_link_tag 'login', plugin: 'redmine_saml'
   #saml-login
