Use redmine_plugin kit as loader

--- a/app/views/saml/settings/_info.html.slim
+++ b/app/views/saml/settings/_info.html.slim
@@ -19,13 +19,12 @@ table.list.saml-config
             = config
 
 em.info
-  = link_to 'See documentation for more information',
-            'https://github.com/omniauth/omniauth-saml#options',
-            class: 'external'
+  = link_to_external 'See documentation for more information',
+                     'https://github.com/omniauth/omniauth-saml#options'
+
 em.info
-  = link_to 'SAML Online Tools',
-            'https://www.samltool.com/online_tools.php',
-            class: 'external'
+  = link_to_external 'SAML Online Tools',
+                     'https://www.samltool.com/online_tools.php'
 
 br
 
