--- a/assets/stylesheets/login.css
+++ b/assets/stylesheets/login.css
@@ -5,26 +5,19 @@
   text-align: center;
 }
 
-#saml-login a,
-#saml-login a:hover {
-  display: inline-block;
-  padding: 0.4em 1em;
-  max-width: 800px;
-  text-align: center;
+#saml-login form button {
+  padding: 10px 20px 38px;
   color: #fff;
-  background-color: #78cc01;
-  text-decoration: none !important;
+  background-color: #f17e32 !important;
   text-shadow: 1px 1px 1px #666;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
   border-radius: 20px;
+  border: 10px solid #fff;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+  font-size: larger;
 }
 
-#saml-login a:hover { background-color: #70c600; }
-
-#saml-login a:active {
-  position: relative;
-  top: 1px;
+#saml-login form button:hover {
+  background-color: #e27126 !important;
 }
 
 #login-form table { margin-top: 2em; }
