--- a/app/views/saml/settings/_info.html.slim
+++ b/app/views/saml/settings/_info.html.slim
@@ -15,8 +15,10 @@ table.list.saml-config.autoscroll
               - config.each do |config_key, config_value|
                 li
                   = "#{config_key}: #{config_value}"
-          - else
+          - if config.is_a? String
             = simple_format config, {}, wrapper_tag: 'div'
+          - else
+            = config
 
 em.info
   = link_to_external 'See documentation for more information',
